force-app/main/default/objects/tdc_tsw__Drip_Member__c/tdc_tsw__Drip_Member__c.object-meta.xml
<CustomObject>
    <label>Drip Member</label>
    <nameField>
        <label>Drip Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drip Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>