force-app/main/default/objects/tdc_tsw__Drip_Member__c/fields/tdc_tsw__Drip_Campaign__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Drip_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drip Campaign</label>
    <referenceTo>tdc_tsw__Drip_Campaign__c</referenceTo>
    <relationshipLabel>Drip Members</relationshipLabel>
    <relationshipName>Drip_Members</relationshipName>
    <type>Lookup</type>
</CustomField>