force-app/main/default/objects/tdc_tsw__Drip_Member__c/fields/tdc_tsw__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>